sample/microservice.yaml
#-------------------------------------
# Namespace
#-------------------------------------
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: mysampleapp-ns
---
#-------------------------------------
# Service 1
#-------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: v1
  type: LoadBalancer
  
---

#-------------------------------------
# Service 2
#-------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: app2-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: v2    
  type: LoadBalancer
---
#-------------------------------------
# Deployment 1
#-------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: v1
  template:
    metadata:
      labels:
        app: v1
    spec:
      containers:
      - name: app1
        image: vinayakentc/nginx:56
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
#-------------------------------------
# Deployment 2
#-------------------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: v2
  template:
    metadata:
      labels:
        app: v2
    spec:
      containers:
      - name: app2
        image: vinayakentc/nginx:56
        imagePullPolicy: Always
        ports:
        - containerPort: 80
