sample/microservice-ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: path-ingress
  namespace: mysampleapp-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
  - host:
    http:
      paths:
      - backend:
          service:
            name: app1-svc
            port:
              number: 80
        path: /app1
        pathType: Prefix
  - host: 
    http:
      paths:
      - backend:
          service:
            name: app2-svc
            port:
              number: 80
        path: /app2
        pathType: Prefix
